# titanium-alpha

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  linkedin_publicacao_titanium_alpha.md  plano_dashboard_upgrade.md  pyproject.toml  retorica-persuasao.skill
.claude/: README.md  settings.local.json
.claude/agents/: architect.md  docs-writer.md  quant-reviewer.md  security-data.md  test-writer.md
.github/workflows/: ci.yml  lint.yml
config/: tickers.json
docker/: Dockerfile  docker-compose.yml
docs/: backtest_metrics.md  benchmark_implementation_plan.md  benchmark_improvement.md  benchmark_improvements_plan.md  design_gap_backtest_vs_production.md  pesquisa_profunda.md  plano_implementacao.md  plano_publicacao.md  projeto_original.md  real_benchmark.md  validation_tier1_results_backup_20260318.json
lightning_logs/version_0/: events.out.tfevents.1772908971.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1772909561.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_10/: events.out.tfevents.1772911297.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_100/: events.out.tfevents.1773728346.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1000/: events.out.tfevents.1773987230.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1001/: events.out.tfevents.1773987230.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1002/: events.out.tfevents.1773987230.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1003/: events.out.tfevents.1773987231.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1004/: events.out.tfevents.1773987231.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1005/: events.out.tfevents.1773988407.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1006/: events.out.tfevents.1773988407.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1007/: events.out.tfevents.1773988407.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1008/: events.out.tfevents.1773988408.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1009/: events.out.tfevents.1773988408.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_101/: events.out.tfevents.1773728346.DESKTOP-LMFPOC6
lightning_logs/version_1010/: events.out.tfevents.1773988408.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1011/: events.out.tfevents.1773988408.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1012/: events.out.tfevents.1773988409.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1013/: events.out.tfevents.1773988409.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1014/: events.out.tfevents.1773988409.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1015/: events.out.tfevents.1773988409.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1016/: events.out.tfevents.1773989846.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1017/: events.out.tfevents.1773989846.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1018/: events.out.tfevents.1773989846.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1019/: events.out.tfevents.1773989846.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_102/: events.out.tfevents.1773728346.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1020/: events.out.tfevents.1773989847.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1021/: events.out.tfevents.1773989847.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1022/: events.out.tfevents.1773989847.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1023/: events.out.tfevents.1773989847.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1024/: events.out.tfevents.1773989848.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1025/: events.out.tfevents.1773989848.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1026/: events.out.tfevents.1773991643.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1027/: events.out.tfevents.1773991643.DESKTOP-LMFPOC6
lightning_logs/version_1028/: events.out.tfevents.1773991643.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1029/: events.out.tfevents.1773991643.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_103/: events.out.tfevents.1773728346.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1030/: events.out.tfevents.1773991644.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1031/: events.out.tfevents.1773991644.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1032/: events.out.tfevents.1773991644.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1033/: events.out.tfevents.1773991644.DESKTOP-LMFPOC6
lightning_logs/version_1034/: events.out.tfevents.1773991645.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1035/: events.out.tfevents.1773991645.DESKTOP-LMFPOC6  hparams.yaml
lightning_logs/version_1036/: hparams.yaml  (+1 more)
notebooks/: methodology_and_results.ipynb
scripts/: _phase1_2_validate.py  _phase1_3_pep_variance.py  _phase1_dryrun.py  _phase3_2_check_rag.py  _phase3_2_embed.py  _phase3_2_retrieve.py  _phase3_2b_sources_analysis.py  _phase3_4_feature_importance.py  _phase_10_11_cpcv_paths.py  export_linkedin_plots.py
src/: __init__.py  config.py
tests/: conftest.py  test_benchmark_metrics.py  test_benchmark_report.py  test_config.py  test_cpcv.py  test_cpcv_oos.py  test_cpcv_oos_phase_10_paths.py  test_dashboard.py  test_dashboard_phase_10_cpcv_spaghetti.py  test_dashboard_phase_11_sharpe_violin.py  test_dashboard_phase_2_drawdowns.py  test_dashboard_phase_3_distribution.py  test_dashboard_phase_4_market_rel.py  test_dashboard_phase_5_capture.py  test_dashboard_phase_6_capm.py  test_dashboard_phase_7_costs.py  test_dashboard_phase_8_concentration.py  test_dashboard_phase_9_attribution.py  test_db.py  test_decision_engine.py  test_features.py  test_graph.py  test_hrp.py  test_ingestion.py  test_news_ingestion.py  test_patchtst_model.py  test_personas.py  test_predict.py  test_rag.py  test_report.py  test_run_benchmark.py  test_run_validation.py  test_state.py  test_walk_forward.py
(+4067 files in other folders)
