[project]
name = "titanium-alpha"
version = "0.1.0"
description = "Agentic multi-strategy hedge fund combining PatchTST, LangGraph multi-agent debate, financial RAG, CPCV backtesting, and HRP allocation"
authors = [
    {name = "Felipe"}
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "yfinance>=0.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "neuralforecast>=1.7",
    "streamlit>=1.38",
    "plotly>=5.22",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "feedparser (>=6.0.12,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy>=1.11",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "langchain-google-genai (>=2.0) ; python_version >= \"3.10\" and python_version < \"4.0\"",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
