[project]
name = "titanium-alpha"
version = "1.0.0"
description = "Agentic multi-strategy hedge fund combining PatchTST, LangGraph multi-agent debate, financial RAG, CPCV-OOS backtesting, and HRP allocation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Felipe Cockles", email = "felipe.cockles@hotmail.com"}
]
keywords = [
    "quantitative-finance",
    "algorithmic-trading",
    "portfolio-optimization",
    "machine-learning",
    "langgraph",
    "patchtst",
    "hrp",
    "cpcv",
    "deflated-sharpe",
    "rag",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "yfinance>=0.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "neuralforecast>=1.7",
    "streamlit>=1.38",
    "plotly>=5.22",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "feedparser (>=6.0.12,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy>=1.11",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "langchain-google-genai (>=2.0) ; python_version >= \"3.10\" and python_version < \"4.0\"",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/cockles98/titanium-alpha"
Repository = "https://github.com/cockles98/titanium-alpha"
Issues = "https://github.com/cockles98/titanium-alpha/issues"
Changelog = "https://github.com/cockles98/titanium-alpha/blob/master/CHANGELOG.md"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N803",  # non-lowercase argument — financial/ML code uses X, y, R, W matrices
    "N806",  # non-lowercase variable — same reason
    "E741",  # ambiguous variable names (l, I, O) — acceptable in math-heavy code
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]  # unused variables in tests are often intentional (fixtures / patch capture)

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
# strict = true intentionally disabled for v1.0.0 — the project uses heavy runtime
# introspection (Streamlit, Polars, Pydantic, LangGraph) where strict mypy produces
# noise without catching real bugs. Phased tightening tracked in CONTRIBUTING.md.

[[tool.mypy.overrides]]
module = "src.backtest.run_validation"
ignore_errors = true  # auxiliary CLI script with known dynamic-typing patterns

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
